--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,9 @@
+<body>
+<link rel='stylesheet' href='/stylesheets/error.css' />
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<p class="emoji">(⊙︿⊙✿)</p>
+<p class="heck">You hecked up and took a wrong turn!</p>
+<p class="sad">:(</p>
+<p class="four">404 Error: Page Not Found</p>
+</body>
