--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,10 +8,6 @@
   <title></title>
 </head>
 <body>
-  <nav>
+<footer>
     <img src="/images/plane.png">
-    <a href="/flights/new"></a>
-    <a href="/flights"></a>
-  </nav>
-  <main>
-    <h1></h1>
+</footer>
