--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,3 +65,18 @@ table td {
   padding: 10px;
   text-align: center;
 }
+
+footer > img {
+  height: 60px;
+}
+
+footer {
+  height: 50px;
+  width: 84%;
+  position: absolute;
+  top: 820px;
+  background-color:  #db493c;
+  display: flex;
+  align-items: center;
+  padding: 0 20px 0 30px;
+}
