--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color:#b6b6b6;
+  justify-content: center;
 }
 
 a {
@@ -50,20 +51,30 @@ nav > h3 {
   display: grid;
   grid-template-columns: auto auto;
   grid-gap: 1rem;
+  background-color: #db493c91;
+  justify-items: center;
+  border-radius: 20px;
+  width: 59%;
+  height: 180px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 18px;
 }
 
 table {
   font-size: 20px;
+  border: solid 3px black;
 }
 
 table thead th {
   padding: 5px;
-  border-bottom: 2px solid #424748;
+  border: 3px solid black;
 }
 
 table td {
   padding: 10px;
   text-align: center;
+  border: solid 3px black;
 }
 
 footer > img {
@@ -79,4 +90,24 @@ footer {
   display: flex;
   align-items: center;
   padding: 0 20px 0 30px;
+}
+
+#list {
+  background-color: white;
+  justify-self: center;
+}
+
+td.details {
+  border: 4px solid white;
+}
+
+.details {
+  color: black;
+  background-color: #f3675b;
+  border-radius: 25px;
+}
+
+td.details:hover {
+  color: white;
+  border: 4px solid black;
 }
